-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: 5.9, 5.10
-
Fix Version/s: 5.10.0 Alpha
-
Component/s: QPA: EGLFS
-
Labels:None
The GBM version of eglfs' DRM/KMS backend has some problems on some modern systems, see f.ex. https://github.com/lirios/wayland/commit/06bc9cb732895c101a1d9615959eb8eee3523a06.
For details see https://github.com/libretro/RetroArch/issues/4790
While the problem is arguably not Qt's fault, eglfs_kms could start using eglGetPlatformDisplay with EGL_PLATFORM_GBM_KHR, when available. This needs dynamic resolving of the EGL 1.5 function.
In fact the EGLDevice (NVIDIA) variant already does it in its customized QEglFSKmsEglDeviceIntegration::createDisplay. The GBM version should follow suit and do something similar.